feat: import google font and add media, root and text-gradient-colot style css

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -12,8 +13,34 @@
 
 body {
   font-family: Inter;
+  margin: 0;
+  padding: 0;
 }
 
+html,
+body,
+:root {
+  height: 100%;
+}
+
+@layer base {
+  :root {
+    --video-width: 100vw;
+    --video-height: 100vh;
+  }
+}
+
+@media (min-aspect-ratio: 16/9) {
+  :root {
+    --video-height: 56.25vw;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  :root {
+    --video-width: 177.78vh;
+  }
+}
 @layer utilities {
   .btn_white {
     @apply border-white bg-white px-8 py-3 text-green-50;
@@ -154,4 +181,11 @@ body {
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+.text-gradient-color {
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
 }
